<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    tools:context="garts.domain.com.garts.home.fragments.ActivityFragment">

    <RelativeLayout
        android:id="@+id/actTopView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/actTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/activity_screen_title"
            android:textAlignment="center"
            android:textColor="@color/whiteTextColor"
            android:textStyle="normal|bold" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/admobBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ADMOB_BANNER_UNIT_ID" />

    <TextView
        android:id="@+id/fa_tip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actTopView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/activity_delete_description"
        android:textSize="9sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fa_activities_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fa_tip_tv"
        android:layout_marginTop="5dp"
        android:clipToPadding="false" />
</RelativeLayout>
