<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="garts.domain.com.garts.Comments">

    <RelativeLayout
        android:id="@+id/commTopView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/commAdNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/comments_text_placeholder"
            android:textColor="@color/whiteTextColor"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/commTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/comments_screen_title"
            android:textColor="@color/whiteTextColor"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/commBackButt"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignBottom="@+id/commAdNameTxt"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_butt" />

        <Button
            android:id="@+id/commRefreshButt"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignBottom="@+id/commAdNameTxt"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/refresh_butt" />
    </RelativeLayout>

    <ListView
        android:id="@+id/commListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/commLine"
        android:layout_below="@+id/commTopView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:divider="#eee"
        android:dividerHeight="2dp" />

    <Button
        android:id="@+id/commSendButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/commCommentEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/comments_send_button"
        android:textAllCaps="false"
        android:textColor="@color/blackTextColor" />

    <View
        android:id="@+id/commLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/commCommentEditText"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/commCommentEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/commSendButt"
        android:ems="10"
        android:hint="@string/comments_input_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/blackTextColor"
        android:textSize="11sp" />
</RelativeLayout>
